-Added Movies to movie folder -Added images to index.html and film.html -Created film.html

--- a/index.html
+++ b/index.html
@@ -13,20 +13,17 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Grant's Website</a>
+  <a class="navbar-brand" href="index.html">Grant's Website</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="about.html">About</a>
       </li>
     </ul>
   </div>
@@ -39,19 +36,19 @@
   </div>
 </div>
 
-<div class="card-deck">
+<div style="max-width:100%;" class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="https://i.imgur.com/yq4FynX.png" alt="Card image cap">
+     <a href="film.html"> <img class="card-img-top" src="images/camera.png" alt="Card image cap"> </a>
     <div class="card-body">
       <h5 class="card-title">Movies and Film</h5>
-      <p class="card-text">Different film projects I've worked on</p>
+      <p class="card-text">I like to make movies, and these are different film projects I've worked on</p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="https://i.imgur.com/fwXRSoJ.png" alt="Card image cap">
+    <img class="card-img-top" src="images/code.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Websites and Code</h5>
       <p class="card-text">Different projects I've worked on using HTML5, CSS, JS, Bootstrap, and more.</p>
@@ -61,10 +58,10 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="images/other.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <h5 class="card-title">Other Projects</h5>
+      <p class="card-text"> A variety of different projects I've worked on that dont fall into the other categories.</p>
     </div>
     <div class="card-footer">
       <small class="text-muted">Last updated 3 mins ago</small>
