--- a/film.html
+++ b/film.html
@@ -39,7 +39,7 @@
 
 <div class="card-group">
   <div class="card">
-    <img class="card-img-top" src="images/firstflight.png" alt="First Flight">
+    <a target="_blank" href="https://youtu.be/L_JdXOu9uRw"> <img class="card-img-top" src="images/firstflight.png" alt="First Flight"> </a>
     <div class="card-body">
       <h5 class="card-title">Green Screen Project: First Flight</h5>
       <p class="card-text">School assignment to utilize the green screen available</p>
@@ -49,7 +49,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="images/gametime.png" alt="Game Time">
+  <a target="_blank" href="https://youtu.be/ofSglIDLHxM">  <img class="card-img-top" src="images/gametime.png" alt="Game Time"> </a>
     <div class="card-body">
       <h5 class="card-title">Long Take Project: Game Time</h5>
       <p class="card-text">School assignment with a requirement of only one shot</p>
