-Added better images -Fixed navbar on film page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="styles.css" />
     <title>Grant's Portfolio</title>
   </head>
-  <body>
+  <body style="padding-bottom: 50px;">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="index.html">Grant's Website</a>
@@ -43,31 +43,24 @@
       <h5 class="card-title">Movies and Film</h5>
       <p class="card-text">I like to make movies, and these are different film projects I've worked on</p>
     </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="images/code.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Websites and Code</h5>
-      <p class="card-text">Different projects I've worked on using HTML5, CSS, JS, Bootstrap, and more.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+      <p class="card-text">Different projects I've worked on using HTML5, CSS, JS, Bootstrap, and more. <b>Not Yet Available</b></p>
     </div>
   </div>
   <div class="card">
     <img class="card-img-top" src="images/other.png" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">Other Projects</h5>
-      <p class="card-text"> A variety of different projects I've worked on that dont fall into the other categories.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
+      <p class="card-text"> A variety of different projects I've worked on that dont fall into the other categories. <b>Not Yet Available</b></p>
     </div>
   </div>
 </div>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
