-Added better images -Added code page

--- a/code.html
+++ b/code.html
@@ -20,7 +20,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">Home</a>
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="about.html">About</a>
@@ -31,49 +31,36 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Movies and Film</h1>
-    <p class="lead">Rated C for cool kids</p>
+    <h1 class="display-4">Websites and Code</h1>
+    <p class="lead">"reeeee HTML is not code" -Justin</p>
   </div>
 </div>
-
 
 <div style="max-width:100%; padding-left: 20px;" class="card-deck">
   <div class="card">
-    <a target="_blank" href="https://youtu.be/L_JdXOu9uRw"> <img class="card-img-top" src="images/firstflight.png" alt="First Flight"> </a>
+     <a href="grantmeder.tk"> <img class="card-img-top" src="images/thisone.png" alt="Card image cap"> </a>
     <div class="card-body">
-      <h5 class="card-title">Green Screen Project: First Flight*</h5>
-      <p class="card-text">School assignment to utilize the green screen available</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Created February 16, 2018</small>
+      <h5 class="card-title">Personal Website</h5>
+      <p class="card-text">Deja Vu, yes?</p>
     </div>
   </div>
   <div class="card">
-  <a target="_blank" href="https://youtu.be/ofSglIDLHxM">  <img class="card-img-top" src="images/gametime.png" alt="Game Time"> </a>
+<img class="card-img-top" src="images/placeholder.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Long Take Project: Game Time*</h5>
-      <p class="card-text">School assignment with a requirement of only one shot</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Created February 27, 2018</small>
+      <h5 class="card-title">N/A</h5>
+      <p class="card-text">N/A</p>
     </div>
   </div>
   <div class="card">
-<a target="_blank" href="https://youtu.be/M7qxiU6rWao">  <img class="card-img-top" src="images/jessiesgirl.png" alt="Jessies Girl"> </a>
+    <img class="card-img-top" src="images/placeholder.png" alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Music Video Project: Jessie's Girl*</h5>
-      <p class="card-text">(Another) School Project that would be filmed with a specific song in mind.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Created March 26, 2018</small>
+      <h5 class="card-title">N/A</h5>
+      <p class="card-text">N/A</p>
     </div>
   </div>
 </div>
 
 
-<footer style="font-size: 15px; padding-left: 15px; padding-top: 10px;">
-  * Means I think the film is 'mediocre' and not very good
-</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
