--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
   </div>
 </div>
 
-<div style="max-width:100%;" class="card-deck">
+<div style="max-width:100%; padding-left: 20px;" class="card-deck">
   <div class="card">
      <a href="film.html"> <img class="card-img-top" src="images/camera.png" alt="Card image cap"> </a>
     <div class="card-body">
       <h5 class="card-title">Movies and Film</h5>
-      <p class="card-text">I like to make movies, and these are different film projects I've worked on</p>
+      <p class="card-text">Quality entertainment for you and your family.</p>
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="images/code.png" alt="Card image cap">
+    <a href="code.html"><img class="card-img-top" src="images/code.png" alt="Card image cap"></a>
     <div class="card-body">
       <h5 class="card-title">Websites and Code</h5>
-      <p class="card-text">Different projects I've worked on using HTML5, CSS, JS, Bootstrap, and more. <b>Not Yet Available</b></p>
+      <p class="card-text">Different projects I've worked on using HTML5, CSS, JS, Bootstrap, and more.</p>
     </div>
   </div>
   <div class="card">
