Making a ~better~ about page

--- a/about.html
+++ b/about.html
@@ -36,13 +36,13 @@
   </div>
 </div>
 
-<p style="text-align: center;">
-  I'm 15 years old and I like technology, as you could probably see from this site. I like to edit videos and code, and I really like planes.
-
-
-That's pretty much it!
+<img src="images/about1.png" style="padding-left: 50px; display:inline;" />
+<p style="padding-left: 10px; font-size: 50px; display:inline">
+  Hello!
 </p>
-
+<p style="display:; padding-top: 50px;">
+  I'm Grant! I'm an Aviation and Technology Enthusiast. I spend most of my time with aviation, computers, or with movies/editing.
+</p>
 
 
     <!-- Optional JavaScript -->
