Better about page still

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="styles.css" />
     <title>Grant's Portfolio</title>
   </head>
-  <body>
+  <body style="padding-bottom: 50px;">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="index.html">Grant's Website</a>
@@ -36,13 +36,43 @@
   </div>
 </div>
 
-<img src="images/about1.png" style="padding-left: 50px; display:inline;" />
-<p style="padding-left: 10px; font-size: 50px; display:inline">
+<div class="left">
+<img src="images/about1.png" style="padding-left: 50px; display:inline; float: left;" />
+<div class="boxed">
+<p style="padding-left: 10px; font-size: 70px; display:inline">
   Hello!
 </p>
-<p style="display:; padding-top: 50px;">
-  I'm Grant! I'm an Aviation and Technology Enthusiast. I spend most of my time with aviation, computers, or with movies/editing.
+<p style="padding-left: 622px; font-size: 25px;">
+  I'm Grant I'm an Aviation and Technology Enthusiast. I spend most of my time with aviation, computers, or with movies/editing. I currently plan on going to Auburn University's Flight Academy to become a Commercial Airline Pilot. I reside in North Alabama, and in the 9th Grade.
 </p>
+</div>
+</div>
+
+<div class="right" style="padding-top: 200px;">
+<img src="images/about2.png" style="padding-right: 50px; display:inline; float: right; " />
+<div class="boxed" style="text-align: right;">
+<p style="padding-right: 10px; font-size: 70px; display:inline;">
+  Aviation Enthusiast
+</p>
+<p style="padding-right: 622px; font-size: 25px;">
+  As I said earlier, I'm really into aviation. I'm in some local orginazations that can help fund and teach me about Aerospace. I currently plan on getting my Student Pilots Lisense as soon as I am 16, and then my Private Pilots Lisense when I am 17.
+</p>
+</div>
+</div>
+
+<div class="left" style="padding-top: 200px;">
+<img src="images/about4.png" style="padding-left: 50px; display:inline; float: left;" />
+<div class="boxed">
+<p style="padding-left: 10px; font-size: 70px; display:inline">
+  What about now?
+</p>
+<p style="padding-left: 622px; font-size: 25px;">
+What me and most of my friends do right now is <b>Flight Simulation.</b> This has become a huge hobby for me. I love to hop on my computer with my friends and fly over 8 hours from Los Angeles to London. Not only does it let us have some fun, but lets us simulate real world systems and teach us about the basics of flying straight from our homes.
+</p>
+</div>
+</div>
+
+
 
 
     <!-- Optional JavaScript -->
