Added new layer of film cards and removed boxes from styles.css for about page

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 <div class="left">
 <img src="images/about1.png" style="padding-left: 50px; display:inline; float: left;" />
 <div class="boxed">
-<p class="big" style="padding-left: 10px; font-size: 70px;">
+<p class="big" style="padding-left: 50px; font-size: 70px;">
   Hello!
 </p>
 <p class="small" style="padding-left: 622px; font-size: 25px;">
@@ -49,9 +49,9 @@
 </div>
 
 <div class="right" style="padding-top: 200px;">
-<img src="images/about2.png" style="padding-right: 50px; display:inline; float: right; " />
+<img src="images/about2.png" style="padding-right: 45px; display:inline; float: right; " />
 <div class="boxed" style="text-align: right;">
-<p class="big" style="padding-right: 10px; font-size: 70px;">
+<p class="big" style="padding-right: 80px; font-size: 70px;">
   Aviation Enthusiast
 </p>
 <p class="small" style="padding-right: 622px; font-size: 25px;">
@@ -66,7 +66,7 @@
 <p class="big" style="padding-left: 10px; font-size: 70px;">
   What about now?
 </p>
-<p class="small" style="padding-left: 622px; font-size: 25px;">
+<p style="padding-left: 622px; font-size: 25px;">
 What me and most of my friends do right now is <b>Flight Simulation.</b> This has become a huge hobby for me. I love to hop on my computer with my friends and fly over 8 hours from Los Angeles to London. Not only does it let us have some fun, but lets us simulate real world systems and teach us about the basics of flying straight from our homes.
 </p>
 </div>
