--- a/film.html
+++ b/film.html
@@ -36,6 +36,38 @@
   </div>
 </div>
 
+<div style="max-width:100%; padding-left: 20px;" class="card-deck">
+  <div class="card">
+    <a target="_blank" href="https://youtu.be/LrwuMgYCNXk"> <img class="card-img-top" src="images/3marks.png" alt="3 Marks"> </a>
+    <div class="card-body">
+      <h5 class="card-title">3 Marks</h5>
+      <p class="card-text">The ultimate thriller of a young boy trying to find his friends killer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Created April 16, 2018</small>
+    </div>
+  </div>
+  <div class="card">
+  <a target="_blank" href="">  <img class="card-img-top" src="images/placeholder.png" alt="Place Holder"> </a>
+    <div class="card-body">
+      <h5 class="card-title">N/A</h5>
+      <p class="card-text">N/A</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">N/A</small>
+    </div>
+  </div>
+  <div class="card">
+  <a target="_blank" href="">  <img class="card-img-top" src="images/placeholder.png" alt="Place Holder"> </a>
+    <div class="card-body">
+      <h5 class="card-title">N/A</h5>
+      <p class="card-text">N/A</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">N/A</small>
+    </div>
+  </div>
+</div>
 
 <div style="max-width:100%; padding-left: 20px;" class="card-deck">
   <div class="card">
