--- a/film.html
+++ b/film.html
@@ -48,13 +48,13 @@
     </div>
   </div>
   <div class="card">
-  <a target="_blank" href="">  <img class="card-img-top" src="images/placeholder.png" alt="Place Holder"> </a>
+  <a target="_blank" href="https://youtu.be/OUAJyTjMxwE">  <img class="card-img-top" src="images/catfished.png" alt="Place Holder"> </a>
     <div class="card-body">
-      <h5 class="card-title">N/A</h5>
-      <p class="card-text">N/A</p>
+      <h5 class="card-title">Catfished</h5>
+      <p class="card-text">The thumbnail doesn't do it justice. A comedy based on two friends tricking each other</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">N/A</small>
+      <small class="text-muted">Created May 23, 2018</small>
     </div>
   </div>
   <div class="card">
