Fixed ATC Notification image

--- a/code.html
+++ b/code.html
@@ -45,7 +45,7 @@
     </div>
   </div>
   <div class="card">
- <a href="http://ATCnotification.tk"> <img class="card-img-top" src="images/ATCnotification.png" alt="Card image cap"> </a>
+ <a href="http://ATCnotification.tk"> <img class="card-img-top" src="images/atcnotification.png" alt="Card image cap"> </a>
     <div class="card-body">
       <h5 class="card-title">ATC Notification</h5>
       <p class="card-text">A program that's Work In Progress, but a simple landing page for it.</p>
