I also forgot the doc
and i fixed a target blank on the code part

--- a/film.html
+++ b/film.html
@@ -58,13 +58,13 @@
     </div>
   </div>
   <div class="card">
-  <a target="_blank" href="">  <img class="card-img-top" src="images/placeholder.png" alt="Place Holder"> </a>
+  <a target="_blank" href="https://youtu.be/yllFsf6aynA">  <img class="card-img-top" src="images/DOC.png" alt="Place Holder"> </a>
     <div class="card-body">
-      <h5 class="card-title">N/A</h5>
-      <p class="card-text">N/A</p>
+      <h5 class="card-title">Mark Spencer Documentary</h5>
+      <p class="card-text">Catchy title, right?</p>
     </div>
     <div class="card-footer">
-      <small class="text-muted">N/A</small>
+      <small class="text-muted">May 8, 2018</small>
     </div>
   </div>
 </div>
